# EduOrchestra

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.pi/: settings.json
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx
data/prompts/: analytics.md  assistant.md  feedback.md  planner.md  practice.md  resource.md
server/: config.py  demo.py  main.py  memory.py
server/orchestrator/: graph.py  llm.py  prompt.py  state.py  tools.py
server/orchestrator/agents/: analytics.py  assistant.py  feedback.py  planner.py  practice.py  resource.py
server/routers/: config.py  progress.py  task.py
server/tests/: conftest.py
server/tests/integration/: test_analytics.py  test_assistant.py  test_config_api.py  test_feedback.py  test_health.py  test_planner.py  test_practice.py  test_resource.py  test_task_api.py  test_workflow.py
server/tests/unit/: test_config.py  test_graph_structure.py  test_llm.py  test_memory.py  test_prompt.py  test_tools.py
spec/: architecture.md  index.md  overview.md  requirements.md  testing.md  versions.md  workflow.md
spec/versions/: v0.1.md  v0.10.md  v0.2.md  v0.3.md  v0.4.md  v0.5.md  v0.6.md  v0.7.md  v0.8.md  v0.9.md
